# datas

./: Cargo.toml  README  README.md  libdatas.rlib
src/: lib.rs  matrix.rs  vector.rs
